--- a/src/Components/ImageSlider/slider.css
+++ b/src/Components/ImageSlider/slider.css
@@ -3,32 +3,42 @@
   padding: 0;
   margin: 0;
 }
+
 .project-images-list-item {
   display: flex;
   margin-bottom: 10px;
 }
+
 .project-images-list-item .image {
   flex: 1;
   padding: 5px;
   box-sizing: border-box;
 }
+
 .project-images-list-item .image:nth-child(odd) {
   margin-right: 5px;
 }
+
 /* Ensure square ratio */
 .project-images-list-item .image::before {
   content: "";
   display: block;
-  padding-top: 100%; /* 1:1 aspect ratio */
+  padding-top: 100%;
+  /* 1:1 aspect ratio */
+}
+
+.project-images-list-item .item {
+  position: relative;
 }
 
 /* Responsive layout for mobile */
 @media (max-width: 600px) {
   .project-images-list-item {
-      flex-direction: column;
+    flex-direction: column;
   }
+
   .project-images-list-item .image {
-      margin-right: 0;
-      margin-bottom: 5px;
+    margin-right: 0;
+    margin-bottom: 5px;
   }
 }
