--- a/src/Components/ServiceDesc/serviceDesc.css
+++ b/src/Components/ServiceDesc/serviceDesc.css
@@ -9,7 +9,7 @@
 .service-desc {
   font-size: 21px;
   font-weight: 400;
-  color: #fff;
+  color: #30B1BB;
 }
 .service-title {
   font-size: 59px;
